--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "bcrypt": "^5.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "lucide-react": "^0.300.0",
+    "lucide-react": "0.300.0",
     "next": "14.0.0",
     "next-auth": "^4.24.0",
     "react": "^18.2.0",
