--- a/package.json
+++ b/package.json
@@ -10,27 +10,27 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^1.0.0",
-    "@hookform/resolvers": "^3.0.0",
-    "@prisma/client": "^6.8.2",
-    "bcrypt": "^5.0.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
+    "@auth/prisma-adapter": "1.0.0",
+    "@hookform/resolvers": "3.0.0",
+    "@prisma/client": "6.8.2",
+    "bcrypt": "5.0.0",
+    "class-variance-authority": "0.7.0",
+    "clsx": "2.0.0",
     "lucide-react": "0.300.0",
     "next": "14.0.0",
-    "next-auth": "^4.24.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.49.0",
-    "tailwind-merge": "^2.0.0",
-    "zod": "^3.22.0"
+    "next-auth": "4.24.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "7.49.0",
+    "tailwind-merge": "2.0.0",
+    "zod": "3.22.0"
   },
   "devDependencies": {
     "@shadcn/ui": "^0.0.4",
     "@types/bcrypt": "^5.0.0",
     "@types/node": "^20.0.0",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
+    "@types/react": "18.2.0",
+    "@types/react-dom": "18.2.0",
     "autoprefixer": "^10.0.0",
     "eslint": "^8.0.0",
     "eslint-config-next": "14.0.0",
