--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "dependencies": {
     "@auth/prisma-adapter": "1.0.0",
     "@hookform/resolvers": "3.0.0",
-    "@prisma/client": "6.8.2",
-    "bcrypt": "5.0.0",
+    "@prisma/client": "5.15.0",
+    "bcryptjs": "2.4.3",
     "class-variance-authority": "0.7.0",
     "clsx": "2.0.0",
     "lucide-react": "0.300.0",
@@ -26,8 +26,8 @@
     "zod": "3.22.0"
   },
   "devDependencies": {
-    "@shadcn/ui": "^0.0.4",
-    "@types/bcrypt": "^5.0.0",
+    "@shadcn/ui": "0.0.4",
+    "@types/bcryptjs": "^2.4.2",
     "@types/node": "^20.0.0",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.0",
@@ -35,8 +35,11 @@
     "eslint": "^8.0.0",
     "eslint-config-next": "14.0.0",
     "postcss": "^8.0.0",
-    "prisma": "^6.8.2",
+    "prisma": "5.15.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.0.0"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
